[package]
authors = ["marcograss"]
description = "Rebalance your stock portfolio to a target allocation"
edition = "2021"
name = "portfolio-rebalancer"
version = "0.2.2"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.47"
json_comments = "0.2.2"
num-traits = "0.2.19"
rust_decimal = "1.38.0"
rust_decimal_macros = "1.38.0"
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
termion = "4.0.4"

[dependencies.tui]
package = "ratatui"
default-features = false
features = ['termion']
version = "0.22.0"
